Bug 508738 - Adjust All Fonts does not show warning for large font sizes
Summary: Adjust All Fonts does not show warning for large font sizes
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_fonts (other bugs)
Version First Reported In: 6.4.4
Platform: Solus Linux
: NOR normal
Target Milestone: ---
Assignee: Nate Graham
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-08-25 22:59 UTC by TraceyC
Modified: 2025-08-28 20:42 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.4.5
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description TraceyC 2025-08-25 22:59:39 UTC
SUMMARY
When adjusting fonts through Adjust All Fonts, the warning about large fonts is missing
System Settings

STEPS TO REPRODUCE
1. Open System Settings - Fonts -  Adjust All Fonts
2. Enable the Size checkbox, Enter a font size => 16

OBSERVED RESULT
No warning

EXPECTED RESULT
The same warning as with adjusting each individual font
"Very large fonts may produce odd looking results. Instead of using a very large font size, consider adjusting the global screen scale"

Seen in Fedora 42 with 4.2.2 and with git-master
Comment 1 Bug Janitor Service 2025-08-27 17:54:22 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/5792
Comment 2 Nate Graham 2025-08-28 18:38:40 UTC
Git commit 1a96640ddbc4efdae608110335f36b8f45a9a49b by Nate Graham.
Committed on 28/08/2025 at 18:11.
Pushed by ngraham into branch 'master'.

kcms/fonts: notify after adjusting all fonts

Otherwise things that depend on these notifications won't work,
including the "wow, your fonts are really huge" warning.
FIXED-IN: 6.4.5

M  +1    -0    kcms/fonts/fonts.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/1a96640ddbc4efdae608110335f36b8f45a9a49b
Comment 3 Nate Graham 2025-08-28 20:42:00 UTC
Git commit 6d4ecccb6917da3f6d3b495f2a46a9608f8e771d by Nate Graham.
Committed on 28/08/2025 at 18:46.
Pushed by ngraham into branch 'Plasma/6.4'.

kcms/fonts: notify after adjusting all fonts

Otherwise things that depend on these notifications won't work,
including the "wow, your fonts are really huge" warning.
FIXED-IN: 6.4.5


(cherry picked from commit 1a96640ddbc4efdae608110335f36b8f45a9a49b)

Co-authored-by: Nate Graham <nate@kde.org>

M  +1    -0    kcms/fonts/fonts.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/6d4ecccb6917da3f6d3b495f2a46a9608f8e771d