kcms/fonts: notify after adjusting all fonts

Otherwise things that depend on these notifications won't work,
including the "wow, your fonts are really huge" warning.

BUG: 508738
FIXED-IN: 6.4.5