kcms/fonts/fonts.cpp
@@ -210,6 +210,7 @@ void KFonts::adjustAllFonts()
         if (QFontInfo(adjustedFont).fixedPitch()) {
             fontsSettings()->setFixed(adjustedFont);
         }
+        Q_EMIT fontsHaveChanged();
     }
 }
 
